--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 		"optimize-autoloader": true,
 		"classmap-authoritative": true,
 		"platform": {
-			"php": "7.2"
+			"php": "7.3"
 		}
 	},
 	"scripts": {
@@ -15,9 +15,10 @@
 		"test:integration": "phpunit -c tests/phpunit.integration.xml"
 	},
 	"require-dev": {
-        "christophwurst/nextcloud": "^20.0",
+		"christophwurst/nextcloud": "^20.0",
 		"nextcloud/coding-standard": "^0.5.0",
-		"phpunit/phpunit": "^8"
+		"phpunit/phpunit": "^9",
+		"guzzlehttp/guzzle": "^7.4"
 	},
 	"require": {
 		"league/csv": "^9.5"
