--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         php-versions: ['7.4']
         databases: ['sqlite']
-        server-versions: ['master']
+        server-versions: ['stable23']
   
     name: php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
@@ -83,200 +83,3 @@ jobs:
           files: apps/${{ env.APP_NAME }}/tests/clover.integration.xml
           fail_ci_if_error: true
           flags: integration
-
-  mysql:
-    runs-on: ubuntu-latest
-
-    strategy:
-      # do not stop on another job's failure
-      fail-fast: false
-      matrix:
-        php-versions: ['7.4', '8.0']
-        databases: ['mysql']
-        server-versions: ['stable22', 'stable23', 'master']
-  
-    name: php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
-
-    services:
-      mysql:
-        image: mariadb:10.5
-        ports:
-          - 4444:3306/tcp
-        env:
-          MYSQL_ROOT_PASSWORD: rootpassword
-        options: --health-cmd="mysqladmin ping" --health-interval 5s --health-timeout 2s --health-retries 5
-
-    steps:
-      - name: Checkout server
-        uses: actions/checkout@v2
-        with:
-          repository: nextcloud/server
-          ref: ${{ matrix.server-versions }}
-          submodules: true
-
-      - name: Checkout app
-        uses: actions/checkout@v2
-        with:
-          path: apps/${{ env.APP_NAME }}
-
-      - name: Set up php ${{ matrix.php-versions }}
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-versions }}
-          tools: phpunit
-          extensions: mbstring, iconv, fileinfo, intl, mysql, pdo_mysql, zip, gd
-          coverage: none
-
-      - name: Set up PHPUnit
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer i
-
-      - name: Set up Nextcloud
-        env:
-          DB_PORT: 4444
-          OC_PASS: test
-        run: |
-          mkdir data
-          ./occ maintenance:install --verbose --database=${{ matrix.databases }} --database-name=nextcloud --database-host=127.0.0.1 --database-port=$DB_PORT --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password 
-          ./occ user:add --password-from-env --display-name="Test Displayname" test
-          ./occ app:enable --force ${{ env.APP_NAME }}
-          php -S localhost:8080 &
-
-      - name: PHPUnit
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer test:unit
-
-      - name: PHPUnit integration
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer test:integration
-
-  pgsql:
-    runs-on: ubuntu-latest
-
-    strategy:
-      # do not stop on another job's failure
-      fail-fast: false
-      matrix:
-        php-versions: ['7.4']
-        databases: ['pgsql']
-        server-versions: ['master']
-  
-    name: php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
-
-    services:
-      postgres:
-        image: postgres
-        ports:
-          - 4444:5432/tcp
-        env:
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: rootpassword
-          POSTGRES_DB: nextcloud
-        options: --health-cmd pg_isready --health-interval 5s --health-timeout 2s --health-retries 5
-
-    steps:
-      - name: Checkout server
-        uses: actions/checkout@v2
-        with:
-          repository: nextcloud/server
-          ref: ${{ matrix.server-versions }}
-          submodules: true
-
-      - name: Checkout app
-        uses: actions/checkout@v2
-        with:
-          path: apps/${{ env.APP_NAME }}
-
-      - name: Set up php ${{ matrix.php-versions }}
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-versions }}
-          tools: phpunit
-          extensions: mbstring, iconv, fileinfo, intl, pgsql, pdo_pgsql, zip, gd
-          coverage: none
-
-      - name: Set up PHPUnit
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer i
-
-      - name: Set up Nextcloud
-        env:
-          DB_PORT: 4444
-          OC_PASS: test
-        run: |
-          mkdir data
-          ./occ maintenance:install --verbose --database=${{ matrix.databases }} --database-name=nextcloud --database-host=127.0.0.1 --database-port=$DB_PORT --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password 
-          ./occ user:add --password-from-env --display-name="Test Displayname" test
-          ./occ app:enable --force ${{ env.APP_NAME }}
-          php -S localhost:8080 &
-
-      - name: PHPUnit
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer test:unit
-
-      - name: PHPUnit integration
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer test:integration
-
-  oci:
-    runs-on: ubuntu-latest
-
-    strategy:
-      # do not stop on another job's failure
-      fail-fast: false
-      matrix:
-        php-versions: ['7.4']
-        databases: ['oci']
-        server-versions: ['master']
-
-    name: php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
-
-    services:
-      oracle:
-        image: deepdiver/docker-oracle-xe-11g # "wnameless/oracle-xe-11g-r2"
-        ports:
-          - 4444:1521/tcp
-
-    steps:
-      - name: Checkout server
-        uses: actions/checkout@v2
-        with:
-          repository: nextcloud/server
-          ref: ${{ matrix.server-versions }}
-          submodules: true
-
-      - name: Checkout app
-        uses: actions/checkout@v2
-        with:
-          path: apps/${{ env.APP_NAME }}
-
-      - name: Set up php ${{ matrix.php-versions }}
-        uses: "shivammathur/setup-php@v2"
-        with:
-          php-version: ${{ matrix.php-versions }}
-          tools: phpunit
-          extensions: mbstring, iconv, fileinfo, intl, oci8, zip, gd
-          coverage: none
-
-      - name: Set up PHPUnit
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer i
-
-      - name: Set up Nextcloud
-        env:
-          DB_PORT: 4444
-          OC_PASS: test
-        run: |
-          mkdir data
-          ./occ maintenance:install --verbose --database=oci --database-name=XE --database-host=127.0.0.1 --database-port=$DB_PORT --database-user=autotest --database-pass=owncloud --admin-user admin --admin-pass admin
-          php -f index.php
-          ./occ user:add --password-from-env --display-name="Test Displayname" test
-          ./occ app:enable --force ${{ env.APP_NAME }}
-
-      - name: PHPUnit
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer test:unit
-
-      - name: PHPUnit integration
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer test:integration
